hphp/hack/test/typecheck/xhp/this_type_attr.php.exp
File "this_type_attr.php", line 8, characters 22-23:
Invalid xhp value for attribute :me in :my-xhp (Typing[4110])
File "this_type_attr.php", line 8, characters 11-16:
This is an object of exactly the class :my-xhp
File "this_type_attr.php", line 7, characters 15-21:
It is incompatible with an object of type :my-xhp
